Разметка текста для всех 3-х страниц

--- a/source/styles/blocks/buttons.scss
+++ b/source/styles/blocks/buttons.scss
@@ -1,4 +1,4 @@
-.button {
+.buttons {
 	background-color: #68b738;
 	font-family: $oswaid-font;
 	color: #ffffff;
@@ -6,4 +6,5 @@
 	line-height: 20px;
 	text-transform: uppercase;
 	text-decoration: none;
+	border: none;
 }
