--- a/source/styles/blocks/main-navigation.scss
+++ b/source/styles/blocks/main-navigation.scss
@@ -2,7 +2,7 @@
 	font-size: $oswaid-font;
 	color: #000000;
 	font-size: 20px;
-	line-height: 20px;
+	line-height: 100%;
 	text-transform: uppercase;
 	text-decoration: none;
 }
