--- a/source/styles/blocks/catalog-product.scss
+++ b/source/styles/blocks/catalog-product.scss
@@ -6,12 +6,12 @@
 }
 
 .catalog-product__link {
-	text-decoration: none;	
+	text-decoration: none;
 }
 
 .catalog-product__link h3 {
 	font-family: $oswaid-font;
-	color: #000000;
+	color: #222222;
 	font-size: 16px;
 	line-height: 20px;
 	text-transform: uppercase;
@@ -24,3 +24,27 @@
 	line-height: 16px;
 }
 
+.catalog-product__title {
+	font-family: $oswaid-font;
+	color: #111111;
+	font-size: 16px;
+	line-height: 20px;
+	text-transform: uppercase;
+}
+
+.catalog-product__item p {
+	font-family: $lato-font;
+	color: #444444;
+	font-size: 12px;
+	line-height: 16px;
+}
+
+.catalog-product__link--show-more {
+	background-color: #f2f2f2;
+	font-family: $oswaid-font;
+	color: #444444;
+	font-size: 16px;
+	line-height: 20px;
+	text-transform: uppercase;
+	text-decoration: none;
+}
