--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -14,13 +14,18 @@
 @import "./blocks/main-navigation";
 
 @import "./blocks/main";
-@import "./blocks/button";
+@import "./blocks/buttons";
 @import "./blocks/promo";
 @import "./blocks/types-of-product";
 @import "./blocks/about-product";
 @import "./blocks/result";
 @import "./blocks/result-slider";
 @import "./blocks/catalog-product";
+@import "./blocks/other-product";
+@import "./blocks/form-request";
+// блоки для описания формы заявки подбора программы
+@import "./blocks/fieldsets"; // блок для описания label и input
+@import "./blocks/pet-info";
 @import "./blocks/address";
 @import "./blocks/address-title";
 @import "./blocks/address-map";
