--- a/source/styles/blocks/other-product.scss
+++ b/source/styles/blocks/other-product.scss
@@ -22,7 +22,7 @@
 }
 
 .other-product__article {
-	background-image: url(../../images/cat-in-bag-mobile@1x.jpg);
+	background-image: url("../../images/cat-in-bag-mobile@1x.jpg");
 	background-repeat: no-repeat;
 	background-color: rgba(104, 183, 56, 0.85);
 }
