--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -15,8 +15,8 @@
 	text-transform: uppercase;
 }
 
-.promo__title{
-	background-image: url(../../images/index-background-desktop-mobile@1x.webp);
+.promo__title {
+	background-image: url("../../images/index-background-desktop-mobile@1x.webp");
 	background-repeat: no-repeat;
 	background-color: rgba(104, 183, 56, 0.85);
 }
