--- a/source/styles/blocks/main-navigation.scss
+++ b/source/styles/blocks/main-navigation.scss
@@ -1,7 +1,6 @@
 .main-navigation__link {
-	font-size: $oswaid-font;
-	color: #000000;
-	line-height: 100%;
-	text-transform: uppercase;
-	text-decoration: none;
+  font-family: $oswaid-font;
+  color: #000000;
+  line-height: 100%;
+  text-transform: uppercase;
 }
