--- a/source/styles/blocks/types-of-product.scss
+++ b/source/styles/blocks/types-of-product.scss
@@ -1,27 +1,26 @@
 .types-of-product__item {
-	background-color: #f2f2f2;
-}
+  background-color: #f2f2f2;
 
-.types-of-product__item h3 {
-	color: #000000;
-	font-family: $oswaid-font;
-	font-size: 24px;
-	line-height: 37px;
-	text-transform: uppercase;
-}
+  h3 {
+    color: #000000;
+    font-family: $oswaid-font;
+    font-size: 24px;
+    line-height: 37px;
+    text-transform: uppercase;
+  }
 
-.types-of-product__item p {
-	color: #444444;
-	font-family: $lato-font;
-	font-size: 14px;
-	line-height: 18px;
-}
+  p {
+    color: #444444;
+    font-family: $lato-font;
+    font-size: 14px;
+    line-height: 18px;
+  }
 
-.types-of-product__item a {
-	color: #000000;
-	font-family: $oswaid-font;
-	font-size: 16px;
-	line-height: 16px;
-	text-transform: uppercase;
+  a {
+    color: #000000;
+    font-family: $oswaid-font;
+    font-size: 16px;
+    line-height: 16px;
+    text-transform: uppercase;
+  }
 }
-
