--- a/source/styles/blocks/catalog-product.scss
+++ b/source/styles/blocks/catalog-product.scss
@@ -1,50 +1,40 @@
 .catalog-product h1 {
-	font-family: $oswaid-font;
-	color: #000000;
-	font-size: 36px;
-	line-height: 36px;
+  font-family: $oswaid-font;
+  color: #000000;
+  font-size: 36px;
+  line-height: 36px;
 }
 
-.catalog-product__link {
-	text-decoration: none;
-}
+.catalog-product__list {
+  text-decoration: none;
 
-.catalog-product__link h3 {
-	font-family: $oswaid-font;
-	color: #222222;
-	font-size: 16px;
-	line-height: 20px;
-	text-transform: uppercase;
-}
+  h3 {
+    font-family: $oswaid-font;
+    color: #222222;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
+  }
 
-.catalog-product__item dl {
-	font-family: $lato-font;
-	color: #444444;
-	font-size: 12px;
-	line-height: 16px;
+  dl {
+    font-family: $lato-font;
+    color: #444444;
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
 
 .catalog-product__title {
-	font-family: $oswaid-font;
-	color: #111111;
-	font-size: 16px;
-	line-height: 20px;
-	text-transform: uppercase;
+  font-family: $oswaid-font;
+  color: #111111;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
 }
 
 .catalog-product__item p {
-	font-family: $lato-font;
-	color: #444444;
-	font-size: 12px;
-	line-height: 16px;
-}
-
-.catalog-product__link--show-more {
-	background-color: #f2f2f2;
-	font-family: $oswaid-font;
-	color: #444444;
-	font-size: 16px;
-	line-height: 20px;
-	text-transform: uppercase;
-	text-decoration: none;
+  font-family: $lato-font;
+  color: #444444;
+  font-size: 12px;
+  line-height: 16px;
 }
