--- a/source/styles/blocks/link-show-more.scss
+++ b/source/styles/blocks/link-show-more.scss
@@ -1,4 +1,5 @@
-.html-academy p {
+.link-show-more {
+  background-color: #f2f2f2;
   font-family: $oswaid-font;
   color: #444444;
   font-size: 16px;
