--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -13,6 +13,7 @@
 @import "./blocks/main-navigation";
 @import "./blocks/main";
 @import "./blocks/buttons";
+@import "./blocks/link-show-more";
 @import "./blocks/promo";
 @import "./blocks/types-of-product";
 @import "./blocks/about-product";
