--- a/source/styles/blocks/types-of-product.scss
+++ b/source/styles/blocks/types-of-product.scss
@@ -1,4 +1,5 @@
 .types-of-product__item {
+  position: relative;
   background-color: #f2f2f2;
 
   h3 {
@@ -22,5 +23,36 @@
     font-size: 16px;
     line-height: 16px;
     text-transform: uppercase;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      z-index: 1;
+      width: 32px;
+      height: 10px;
+      background-image: url("../../images/icons/stack.svg#icon_arrow");
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #68b738;
+    box-shadow: 0 0 0 15px transparent;
+  }
+
+  &:first-of-type::after {
+    background-image: url("../../images/icons/stack.svg#cat-slim");
+  }
+
+  &:nth-of-type(2)::after {
+    background-image: url("../../images/icons/stack.svg#cat-pro");
   }
 }
