--- a/source/styles/blocks/address-title.scss
+++ b/source/styles/blocks/address-title.scss
@@ -8,7 +8,7 @@
 
 .address-title__address p {
   font-family: $lato-font;
-  color: #444444;
+  color: $font-grey;
   font-size: 14px;
   line-height: 20px;
   font-style: normal;
