--- a/source/styles/blocks/fieldsets.scss
+++ b/source/styles/blocks/fieldsets.scss
@@ -1,37 +1,39 @@
-.fieldsets legend {
+.fieldsets {
   font-family: $oswaid-font;
-  color: #000000;
-  font-size: 24px;
-  line-height: 26px;
-}
 
-.fieldsets label {
-  font-family: $oswaid-font;
-  color: #444444;
-  font-size: 16px;
-  line-height: 18px;
-  text-transform: uppercase;
-}
+  legend {
+    color: $font-black;
+    font-size: 24px;
+    line-height: 26px;
+  }
 
-.fieldsets input {
-  padding: 14px 0 13px 15px;
-}
+  label {
+    font-family: $oswaid-font;
+    color: $font-grey;
+    font-size: 16px;
+    line-height: 18px;
+    text-transform: uppercase;
+  }
 
+  input {
+    padding: 14px 0 13px 15px;
+  }
 
-.fieldsets input::placeholder {
-  font-family: $oswaid-font;
-  color: #444444;
-  font-size: 16px;
-  line-height: 18px;
-  text-transform: uppercase;
-}
+  input::placeholder {
+    font-family: $oswaid-font;
+    color: $font-grey;
+    font-size: 16px;
+    line-height: 18px;
+    text-transform: uppercase;
+  }
 
-.fieldsets textarea {
-  font-family: $oswaid-font;
-  color: #444444;
-  font-size: 16px;
-  line-height: 18px;
-  text-transform: uppercase;
-  text-align: center;
-  padding: 14px 0;
+  textarea {
+    font-family: $oswaid-font;
+    color: $font-grey;
+    font-size: 16px;
+    line-height: 18px;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 14px 0;
+  }
 }
