--- a/source/styles/blocks/main-navigation.scss
+++ b/source/styles/blocks/main-navigation.scss
@@ -1,6 +1,6 @@
 .main-navigation__link {
   font-family: $oswaid-font;
-  color: #000000;
+  color: $font-black;
   line-height: 100%;
   text-transform: uppercase;
 }
