--- a/source/styles/blocks/html-academy.scss
+++ b/source/styles/blocks/html-academy.scss
@@ -1,6 +1,24 @@
-.html-academy p {
-  font-family: $oswaid-font;
-  color: #444444;
-  font-size: 16px;
-  line-height: 20px;
+.html-academy {
+  p {
+    font-family: $oswaid-font;
+    color: $font-grey;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .html-academy__icon {
+    color: $color-for-social-media;
+  }
+
+  &:hover .html-academy__icon {
+    color: $basic-green;
+  }
+
+  &:focus .html-academy__icon {
+    color: $basic-green;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
