--- a/source/styles/blocks/link-show-more.scss
+++ b/source/styles/blocks/link-show-more.scss
@@ -1,7 +1,7 @@
 .link-show-more {
-  background-color: #f2f2f2;
+  background-color: $background-color-ligth-grey;
   font-family: $oswaid-font;
-  color: #444444;
+  color: $font-grey;
   font-size: 16px;
   line-height: 20px;
 }
