--- a/source/styles/blocks/other-product.scss
+++ b/source/styles/blocks/other-product.scss
@@ -29,7 +29,7 @@
 
 .other-product__article p {
   font-family: $lato-font;
-  color: #ffffff;
+  color: $font-white;
   font-size: 16px;
   line-height: 20px;
 }
