--- a/source/styles/blocks/result.scss
+++ b/source/styles/blocks/result.scss
@@ -1,20 +1,20 @@
 .result h2 {
   font-family: $oswaid-font;
-  color: #000000;
+  color: $font-black;
   font-size: 36px;
   line-height: 40px;
 }
 
 .result__description {
   font-family: $lato-font;
-  color: #444444;
+  color: $font-grey;
   font-size: 14px;
   line-height: 18px;
 }
 
 .result__list dt {
   font-family: $lato-font;
-  color: #444444;
+  color: $font-grey;
   font-size: 12px;
   line-height: 100%;
   text-transform: lowercase;
@@ -22,7 +22,7 @@
 
 .result__list dd {
   font-family: $oswaid-font;
-  color: #000000;
+  color: $font-black;
   font-size: 24px;
   line-height: 24px;
   text-transform: uppercase;
@@ -30,7 +30,7 @@
 
 .result__expenses {
   font-family: $oswaid-font;
-  color: #000000;
+  color: $font-black;
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
