--- a/source/styles/blocks/types-of-product.scss
+++ b/source/styles/blocks/types-of-product.scss
@@ -1,9 +1,9 @@
 .types-of-product__item {
   position: relative;
-  background-color: #f2f2f2;
+  background-color: $background-color-ligth-grey;
 
   h3 {
-    color: #000000;
+    color: $font-black;
     font-family: $oswaid-font;
     font-size: 24px;
     line-height: 37px;
@@ -11,14 +11,14 @@
   }
 
   p {
-    color: #444444;
+    color: $font-grey;
     font-family: $lato-font;
     font-size: 14px;
     line-height: 18px;
   }
-
+  /*---  Стили для ссылки  ---*/
   a {
-    color: #000000;
+    color: $font-black;
     font-family: $oswaid-font;
     font-size: 16px;
     line-height: 16px;
@@ -33,26 +33,69 @@
       height: 10px;
       background-image: url("../../images/icons/stack.svg#icon_arrow");
     }
+
+    &:hover::after {
+      content: "";
+      position: absolute;
+      z-index: 1;
+      width: 32px;
+      height: 10px;
+      background-image: url("../../images/icons/stack.svg#icon_arrow-hover");
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #68b738;
-    box-shadow: 0 0 0 15px transparent;
+  /*---   Стили для иконок (зеленый кружок с черной иконкой)   ---*/
+  &-slim-line {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: $basic-green;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      z-index: 2;
+      top: 0;
+      left: 7px;
+      width: 36px;
+      height: 50px;
+      background-image: url("../../images/icons/stack.svg#cat-slim");
+    }
   }
 
-  &:first-of-type::after {
-    background-image: url("../../images/icons/stack.svg#cat-slim");
-  }
+  &-pro-line {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: $basic-green;
+    }
 
-  &:nth-of-type(2)::after {
-    background-image: url("../../images/icons/stack.svg#cat-pro");
+    &::after {
+      content: "";
+      position: absolute;
+      z-index: 2;
+      top: 7px;
+      left: -8px;
+      width: 67px;
+      height: 28px;
+      background-image: url("../../images/icons/stack.svg#cat-pro");
+    }
   }
 }
