--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -1,1 +1,11 @@
 /* здесь используйте глобальные переменные */
+
+$font-black: #000000;
+$font-grey: #444444;
+$font-white: #ffffff;
+
+$background-color-ligth-grey: #f2f2f2;
+$color-for-social-media: #666666;
+
+$basic-green: #68b738;
+$basic-green-hover: #5eaa2f;
