--- a/source/styles/blocks/social-media.scss
+++ b/source/styles/blocks/social-media.scss
@@ -1,16 +1,61 @@
 .social-media__link {
-  &:hover .social-media__link-svg {
-    opacity: 1;
-    fill: $basic-green;
+  &-vk {
+    display: block;
+    width: 28px;
+    height: 22px;
+    background-color: $color-for-social-media;
+    mask-image: url("../../images/icons/stack.svg#vkontakte");
+
+    &:hover {
+      opacity: 1;
+      background-color: $basic-green;
+    }
+
+    &:focus {
+      opacity: 1;
+      background-color: $basic-green;
+    }
   }
 
-  &:focus .social-media__link-svg {
-    opacity: 1;
-    fill: $basic-green;
+  &-youtube {
+    display: block;
+    width: 28px;
+    height: 22px;
+    background-color: $color-for-social-media;
+    mask-image: url("../../images/icons/stack.svg#youtube");
+
+    &:hover {
+      opacity: 1;
+      background-color: $basic-green;
+    }
+
+    &:focus {
+      opacity: 1;
+      background-color: $basic-green;
+    }
   }
 
-  &:active .social-media__link-svg {
+  &-telegramm {
+    display: block;
+    width: 28px;
+    height: 22px;
+    background-color: $color-for-social-media;
+    mask-image: url("/../images/icons/stack.svg#telegram");
+
+    &:hover {
+        opacity: 1;
+        background-color: $basic-green;
+      }
+
+      &:focus {
+        opacity: 1;
+        background-color: $basic-green;
+      }
+  }
+
+  &:active {
     opacity: 0.3;
   }
 }
+
 
