--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -9,3 +9,8 @@ $color-for-social-media: #666666;
 
 $basic-green: #68b738;
 $basic-green-hover: #5eaa2f;
+
+// Viewports
+
+$tablet-width: 700px;
+$desktop-width: 1440px;
