--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -8,11 +8,11 @@
 /* BLOCKS */
 @import "./blocks/page";
 @import "./blocks/wrapper";
-@import "./blocks/header";
+@import "./blocks/header";   // определены paddings
 @import "./blocks/main-navigation";
 @import "./blocks/main";
 @import "./blocks/buttons";
-@import "./blocks/link-show-more";
+//@import "./blocks/link-show-more";
 @import "./blocks/promo";
 @import "./blocks/types-of-product";
 @import "./blocks/about-product";
@@ -22,10 +22,21 @@
 @import "./blocks/other-product";
 @import "./blocks/form-request";
 // блоки для описания формы заявки подбора программы
-@import "./blocks/fieldsets"; // блок для описания label и input
+@import "./blocks/fieldsets"; // блок для описания labels и inputs
+@import "./blocks/container-pet-info-choice-of-product";
+@import "./blocks/pet-info";
+@import "./blocks/choice-of-product";
+@import "./blocks/owner-info";
+@import "./blocks/comment";
+@import "./blocks/additionally";
 @import "./blocks/address";
 @import "./blocks/address-title";
 @import "./blocks/address-map";
 @import "./blocks/footer";
 @import "./blocks/social-media";
 @import "./blocks/html-academy";
+/*
+@media (min-width: $desktop-width) {}
+
+@media (min-width: $tablet-width) {}
+*/
