--- a/source/styles/blocks/about-product.scss
+++ b/source/styles/blocks/about-product.scss
@@ -1,18 +1,37 @@
-.about-product h2 {
-  font-family: $oswaid-font;
-  color: $font-black;
-  font-size: 36px;
-  line-height: 40px;
+.about-product {
+  margin-bottom: 52px;
+  @include container-modile;
+
+  h2 {
+    font-family: $oswaid-font;
+    color: $font-black;
+    font-size: 36px;
+    font-weight: 300;
+    line-height: 40px;
+    margin-bottom: 40px;
+    padding: 0;
+  }
+}
+
+.about-product__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  @include reset-list;
 }
 
 .about-product__item {
   position: relative;
+  max-width: 330px;
 
   p {
+    padding-top: 2px;
     font-family: $lato-font;
     color: $font-grey;
     font-size: 14px;
     line-height: 18px;
+    margin-left: 80px;
   }
 
   &::before {
@@ -25,7 +44,7 @@
 
   &-leaf::before {
     background-image: url("../../images/icons/stack.svg#icon-leaf");
-    background-size: 30px 32px;
+    background-size: 32px 30px;
     background-repeat: no-repeat;
     background-position: center;
   }
@@ -49,5 +68,93 @@
     background-size: 26px 31px;
     background-repeat: no-repeat;
     background-position: center;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .about-product {
+    margin-bottom: 149px;
+    position: relative;
+    @include container-tablet;
+
+    h2 {
+      font-size: 60px;
+      line-height: 100%;
+      margin-bottom: 72px;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      bottom: -120px;
+      background-color: #e6e6e6;
+    }
+  }
+
+  .about-product__list {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 132px;
+    padding-right: 75px;
+	  counter-reset: num;
+  }
+
+  .about-product__item {
+    position: relative;
+    max-width: 245px;
+
+    p {
+      font-size: 16px;
+      line-height: 24px;
+      margin-left: 0;
+      padding-top: 112px;
+    }
+
+    &::before {
+      width: 80px;
+      height: 80px;
+    }
+
+    &::after {
+      content: counter(num);
+      counter-increment: num;
+      position: absolute;
+      z-index: -1;
+      top: -40px;
+      left: 116px;
+      color: $background-color-ligth-grey;
+      text-align: center;
+      font-family: $oswaid-font;
+      font-size: 280px;
+      font-weight: 400;
+      line-height: 100%;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .about-product {
+    @include container-desktop;
+
+    &::before {
+      background-color: transparent;
+    }
+  }
+
+  .about-product__list {
+    gap: 120px 40px;
+    padding: 0;
+  }
+
+  /*---  Позиционирование для цифр на заднем фоне  ---*/
+  .about-product__item {
+    &::after {
+      top: -40px;
+      left: 115px;
+    }
   }
 }
