--- a/source/styles/blocks/form-request.scss
+++ b/source/styles/blocks/form-request.scss
@@ -1,22 +1,109 @@
 .form-request {
   font-family: $oswaid-font;
   color: $font-black;
+  margin-bottom: 32px;
 
   h1 {
     font-size: 36px;
     line-height: 36px;
+    padding-top: 27px;
+    margin-bottom: 38px;
   }
 
   p {
     font-size: 14px;
     line-height: 18px;
     text-transform: uppercase;
+    margin-bottom: 39px;
+    width: 230px;
   }
 }
 
-.form-request__form fieldset {
-  border: none;
+.form-request__form {
+
+  input[type="text"],
+  input[type="number"],
+  input[type="email"],
+  input[type="tel"]{
+    border: 1px solid #e7e7e7;
+ }
+
+  /*---	Добавляем отступы к соседствующим меткам   ---*/
+  input[type="checkbox"]+label,
+  input[type="radio"]+label {
+    display: inline-block;
+    position: relative;
+    padding-left: 45px;
+    cursor: pointer;
+  }
+
+  /*---	Рисуем новые элементы перед label   ---*/
+  input[type="checkbox"]:checked+label:before,
+  input[type="checkbox"]:not(:checked)+label:before,
+  input[type="radio"]:checked+label:before,
+  input[type="radio"]:not(:checked)+label:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: -5px;
+    width: 30px;
+    height: 30px;
+  }
+
+  input[type="checkbox"]:checked+label:before,
+  input[type="checkbox"]:not(:checked)+label:before {
+    border: 1px solid #cdcdcd;
+  }
+
+  input[type="radio"]:checked+label:before,
+  input[type="radio"]:not(:checked)+label:before {
+    border-radius: 100%;
+    border: 1px solid #cdcdcd;
+  }
+
+  input[type="checkbox"]:checked+label:after,
+  input[type="checkbox"]:not(:checked)+label:after,
+  input[type="radio"]:checked+label:after,
+  input[type="radio"]:not(:checked)+label:after {
+    content: "";
+    position: absolute;
+    transition: all 0.2s ease;
+  }
+
+  /*---	Рисуем галочку и кружок   ---*/
+  input[type="checkbox"]:checked+label:after,
+  input[type="checkbox"]:not(:checked)+label:after {
+    left: 10px;
+    top: 4px;
+    width: 12px;
+    height: 9px;
+    border-left: 2px solid $basic-green;
+    border-bottom: 2px solid $basic-green;
+    transform: rotate(-45deg);
+  }
+
+  input[type="radio"]:checked+label:after,
+  input[type="radio"]:not(:checked)+label:after {
+    left: 8px;
+    top: 3px;
+    width: 13px;
+    height: 13px;
+    border-radius: 100%;
+    background-color: $basic-green;
+  }
+
+  /*---	Скрываем галочку и кружок при нажатии   ---*/
+  input[type="checkbox"]:not(:checked)+label:after,
+  input[type="radio"]:not(:checked)+label:after {
+    opacity: 0;
+  }
+
+  input[type="checkbox"]:checked+label:after,
+  input[type="radio"]:checked+label:after {
+    opacity: 1;
+  }
 }
+
 
 .form-request__required-fields {
   font-family: $lato-font;
@@ -24,4 +111,33 @@
   font-size: 14px;
   line-height: 16px;
   text-align: center;
+}
+
+.form-request__button {
+  width: 100%;
+  margin-bottom: 21px;
+}
+
+
+@media (min-width: $tablet-width) {
+.form-request {
+    margin-bottom: 60px;
+
+    h1 {
+      font-size: 60px;
+      line-height: 100%;
+      padding: 40px 0 54px;
+    }
+
+    p {
+      font-size: 20px;
+      line-height: 150%;
+      margin-bottom: 66px;
+      max-width: 350px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+
 }
