--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,3 +1,22 @@
 .header {
   color: $font-white;
+  @include container-modile;
+  padding-top: 13px;
+  padding-bottom: 8px;
+}
+
+@media (min-width: $tablet-width) {
+  .header {
+    @include container-tablet;
+    padding-top: 25px;
+    padding-bottom: 32px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .header {
+    @include container-desktop;
+    padding-top: 55px;
+    padding-bottom: 55px;
+  }
 }
