--- a/source/styles/blocks/other-product.scss
+++ b/source/styles/blocks/other-product.scss
@@ -1,6 +1,6 @@
 .other-product h2 {
   font-family: $oswaid-font;
-  color: #000000;
+  color: $font-black;
   font-size: 24px;
   line-height: 24px;
 }
