--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,61 +1,185 @@
 .promo {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-}
-
-.promo__title {
+  justify-content: center;
   background-color: rgba(104, 183, 56, 0.85);
   background-image: url("../../images/index-background-desktop-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
-  padding: 27px 0 164px 0;
+  background-position: center;
   position: relative;
-  z-index: -1;
+  height: 302px;
+  margin-bottom: 198px;
 
-  margin-bottom: 138px;
-
+  /*---  Зеленый фон  ---*/
   &::before {
     content: "";
     position: absolute;
-    z-index: -1;
-    top: 0;
+    bottom: 0;
     left: 0;
+    min-width: 100%;
+    min-height: 100%;
     background-color: rgba(104, 183, 56, 0.85);
   }
+}
+
+.promo__title {
+  padding-top: 27px;
+  position: relative;
+  z-index: 1;
+  color: $font-white;
+  text-align: center;
+  font-weight: 300;
+  @include container-modile;
 
   h1 {
     font-family: $oswaid-font;
-    text-align: center;
-    color: $font-white;
+    color: inherit;
     font-size: 36px;
+    font-weight: inherit;
     line-height: 100%;
     margin-bottom: 25px;
-    padding: 0 35px;
   }
 
   p {
     font-family: $oswaid-font;
-    text-align: center;
-    color: $font-white;
+    color: inherit;
     font-size: 14px;
-    line-height: 14px;
+    font-weight: inherit;
+    line-height: 100%;
     text-transform: uppercase;
-    padding: 0 35px;
+    margin-bottom: 302px;
   }
 }
 
+/*---  Картинка с банкой  --*/
 .promo__image {
   position: absolute;
-  bottom: 60px;
+  top: 167px;
 }
 
 .promo__button {
-  padding: 10px 10px;
-  margin-bottom: 20px;
+  display: block;
+  text-align: center;
+  font-size: 16px;
+  line-height: 125%;
 }
+
+@media (min-width: $tablet-width) {
+  .promo {
+    display: block;
+    background-color: transparent;
+    background-image: none;
+    margin-bottom: 535px;
+    @include container-tablet;
+
+    &::before {
+      background-color: transparent;
+    }
+  }
+
+  .promo__title {
+    color: $font-black;
+    padding-left: 90px;
+    text-align: left;
+    width: 600px;
+
+    h1 {
+      font-family: $oswaid-font;
+      text-align: inherit;
+      color: inherit;
+      font-size: 60px;
+      line-height: 100%;
+      margin-bottom: 40px;
+    }
+
+    p {
+      font-family: $oswaid-font;
+      text-align: inherit;
+      color: inherit;
+      font-size: 20px;
+      line-height: 100%;
+      text-transform: uppercase;
+      margin-bottom: 50px;
+    }
+  }
+  .promo__button {
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    line-height: 26px;
+    width: 244px;
+    margin-bottom: 20px;
+  }
+
+  /*---  Картинка с банкой  --*/
+  .promo__image {
+    position: absolute;
+    top: 228px;
+    right: 29px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .promo {
+    background-image: url("../../images/index-background-desktop-web@1x.webp");
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 720px;
+    height: 694px;
+    z-index: -1;
+    margin-bottom: 218px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      min-width: 100%;
+      min-height: 100%;
+      background-color: rgba(104, 183, 56, 0.85);
+    }
+  }
+
+  .promo__title {
+    position: absolute;
+    top: 197px;
+    left: -40%;
+    transform: translateX(-50%);
+    color: $font-black;
+    text-align: left;
+    width: 700px;
+    @include container-desktop;
+
+    h1 {
+      font-family: $oswaid-font;
+      text-align: inherit;
+      color: inherit;
+      font-size: 60px;
+      line-height: 100%;
+      margin-bottom: 40px;
+    }
+
+    p {
+      font-family: $oswaid-font;
+      text-align: inherit;
+      color: inherit;
+      font-size: 20px;
+      line-height: 100%;
+      text-transform: uppercase;
+      margin-bottom: 52px;
+    }
+  }
+
+  /*---  Картинка с банкой  --*/
+  .promo__image {
+    position: relative;
+    top: 143px;
+    right: 193px;
+    z-index: 5;
+  }
+}
+
 
 
 
