--- a/source/styles/blocks/social-media.scss
+++ b/source/styles/blocks/social-media.scss
@@ -1,3 +1,12 @@
+.social-media {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  max-width: 200px;
+  gap: 24px;
+  @include reset-list;
+}
+
 .social-media__link {
   &-vk {
     display: block;
@@ -5,6 +14,7 @@
     height: 22px;
     background-color: $color-for-social-media;
     mask-image: url("../../images/icons/stack.svg#vkontakte");
+    @include reset-list;
 
     &:hover {
       opacity: 1;
@@ -57,3 +67,4 @@
     opacity: 0.3;
   }
 }
+
