--- a/source/styles/global/mixins.scss
+++ b/source/styles/global/mixins.scss
@@ -7,3 +7,32 @@
     src: $font-src format("woff2");
   }
 }
+/*
+@mixin padding-container($top, $right, $bottom, $left) {
+  padding-top: $top;
+  padding-right: $right;
+  padding-bottom: $bottom;
+  padding-left: $left;
+}
+*/
+
+@mixin container-modile {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+@mixin container-tablet {
+  padding-right: 33.5px;
+  padding-left: 30px;
+}
+
+@mixin container-desktop {
+  padding-right: 110px;
+  padding-left: 110px;
+}
+
+@mixin reset-list {
+  list-style: none;
+  text-decoration: none;
+  border: none;
+}
