--- a/source/styles/blocks/result.scss
+++ b/source/styles/blocks/result.scss
@@ -81,7 +81,7 @@
   h2 {
     font-size: 60px;
     line-height: 100%;
-    padding: 45px 0 60px 0;
+    padding: 2px 0 60px 0;
   }
 
   .result__content {
@@ -98,13 +98,13 @@
   .result__list {
     display: flex;
     justify-content: space-between;
-    gap: 47px;
+    gap: 43px;
   }
 
   .result__item {
     display: flex;
     flex-direction: column;
-    width: 125px;
+    width: 162px;
     align-items: center;
     border: 1px solid #cdcdcd;
     border-radius: 5px;
@@ -114,7 +114,7 @@
     line-height: 100%;
     position: relative;
     top: 8px;
-    width: 80px;
+    width: 130px;
     text-align: center;
     background-color: #fff;
   }
@@ -131,6 +131,8 @@
     line-height: 100%;
     text-transform: uppercase;
     width: 175px;
+    text-align: left;
+    margin: 0;
   }
 }
 
