--- a/source/styles/blocks/comment.scss
+++ b/source/styles/blocks/comment.scss
@@ -1,16 +1,16 @@
 .comment {
-  margin-bottom: 23px;
+  margin-bottom: 20px;
   position: relative;
 
-    &::before {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      top: -45px;
-      background-color: $basic-green;
-      z-index: -1;
-    }
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    top: -49px;
+    background-color: $basic-green;
+    z-index: -1;
+  }
 
   legend {
     margin-bottom: 38px;
@@ -19,9 +19,13 @@
   }
 }
 
+.comment__textarea {
+  height: 150px;
+}
+
 @media (min-width: $tablet-width) {
   .comment {
-    margin-bottom: 70px;
+    margin-bottom: 60px;
     position: relative;
 
     &::before {
@@ -29,23 +33,22 @@
       position: absolute;
       width: 100%;
       height: 2px;
-      top: -90px;
+      top: -101px;
       background-color: $basic-green;
       z-index: -1;
     }
 
     legend {
-      margin-bottom: 78px;
+      margin-bottom: 88px;
       background-color: #ffffff;
-      padding: 0 40px;
-      margin-left: 60px;
+      margin-left: 50px;
     }
   }
 }
 
 @media (min-width: $desktop-width) {
   .comment {
-    margin-bottom: 70px;
+    margin-bottom: 65px;
     position: relative;
 
     &::before {
@@ -61,8 +64,7 @@
     legend {
       margin-bottom: 78px;
       background-color: #ffffff;
-      padding: 0 40px;
-      margin-left: 60px;
+      margin-left: 90px;
     }
   }
 }
