--- a/source/styles/blocks/fieldsets.scss
+++ b/source/styles/blocks/fieldsets.scss
@@ -34,8 +34,9 @@
     font-size: 16px;
     line-height: 18px;
     text-transform: uppercase;
-    text-align: center;
     padding: 14px 0;
+    width: 100%;
+    padding-left: 14px;
   }
 }
 
@@ -53,12 +54,19 @@
     }
 
     input {
-      padding: 18px 0 10px 20px;
+      padding: 21px 0 14px 20px;
     }
 
     input::placeholder {
       font-size: 20px;
       line-height: normal;
+    }
+
+    textarea {
+      font-size: 20px;
+      line-height: 150%;
+      height: 175px;
+      margin-left: 40px;
     }
   }
 }
