--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -1,16 +1,20 @@
 .footer {
   background-color: $background-color-ligth-grey;
+}
+
+/*---  Поизионирование конетнта footer  ---*/
+.footer__content {
   padding: 40px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 41px;
-  @include container-modile;
+  gap: 39px;
+  @include padding-container(mobile);
 }
 
 .footer__logo {
-  width: 128px;
-  height: 24px;
+  width: 130px;
+  height: 26px;
   background-color: #111111;
   mask-image: url("../../images/icons/stack.svg#logo-footer");
 
@@ -27,38 +31,15 @@
   }
 }
 
-.footer__decor-line {
-  position: relative;
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    top: 43px;
-    background-color: #d9d9d9;
-  }
-}
-
 @media (min-width: $tablet-width) {
-  .footer {
-    @include container-tablet;
-     padding: 61.5px 0;
-  }
 
- .footer-container {
+.footer__content {
   flex-direction: row;
   justify-content: space-between;
   gap: 0;
-
-  &::after {
-      background-color: transparent;
-    }
-
-  &::before {
-    background-color: transparent;
+  padding-top: 55px;
+  @include padding-container($tablet-width);
   }
- }
 }
 
 @media (min-width: $desktop-width) {}
