--- a/source/styles/blocks/form-request.scss
+++ b/source/styles/blocks/form-request.scss
@@ -10,100 +10,13 @@
     margin-bottom: 38px;
   }
 
-  p {
+  .form-request__description {
     font-size: 14px;
     line-height: 18px;
+    margin-bottom: 38px;
     text-transform: uppercase;
-    margin-bottom: 39px;
-    width: 230px;
   }
 }
-
-.form-request__form {
-
-  input[type="text"],
-  input[type="number"],
-  input[type="email"],
-  input[type="tel"]{
-    border: 1px solid #e7e7e7;
- }
-
-  /*---	Добавляем отступы к соседствующим меткам   ---*/
-  input[type="checkbox"]+label,
-  input[type="radio"]+label {
-    display: inline-block;
-    position: relative;
-    padding-left: 45px;
-    cursor: pointer;
-  }
-
-  /*---	Рисуем новые элементы перед label   ---*/
-  input[type="checkbox"]:checked+label:before,
-  input[type="checkbox"]:not(:checked)+label:before,
-  input[type="radio"]:checked+label:before,
-  input[type="radio"]:not(:checked)+label:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: -5px;
-    width: 30px;
-    height: 30px;
-  }
-
-  input[type="checkbox"]:checked+label:before,
-  input[type="checkbox"]:not(:checked)+label:before {
-    border: 1px solid #cdcdcd;
-  }
-
-  input[type="radio"]:checked+label:before,
-  input[type="radio"]:not(:checked)+label:before {
-    border-radius: 100%;
-    border: 1px solid #cdcdcd;
-  }
-
-  input[type="checkbox"]:checked+label:after,
-  input[type="checkbox"]:not(:checked)+label:after,
-  input[type="radio"]:checked+label:after,
-  input[type="radio"]:not(:checked)+label:after {
-    content: "";
-    position: absolute;
-    transition: all 0.2s ease;
-  }
-
-  /*---	Рисуем галочку и кружок   ---*/
-  input[type="checkbox"]:checked+label:after,
-  input[type="checkbox"]:not(:checked)+label:after {
-    left: 10px;
-    top: 4px;
-    width: 12px;
-    height: 9px;
-    border-left: 2px solid $basic-green;
-    border-bottom: 2px solid $basic-green;
-    transform: rotate(-45deg);
-  }
-
-  input[type="radio"]:checked+label:after,
-  input[type="radio"]:not(:checked)+label:after {
-    left: 8px;
-    top: 3px;
-    width: 13px;
-    height: 13px;
-    border-radius: 100%;
-    background-color: $basic-green;
-  }
-
-  /*---	Скрываем галочку и кружок при нажатии   ---*/
-  input[type="checkbox"]:not(:checked)+label:after,
-  input[type="radio"]:not(:checked)+label:after {
-    opacity: 0;
-  }
-
-  input[type="checkbox"]:checked+label:after,
-  input[type="radio"]:checked+label:after {
-    opacity: 1;
-  }
-}
-
 
 .form-request__required-fields {
   font-family: $lato-font;
@@ -114,10 +27,18 @@
 }
 
 .form-request__button {
+  font-size: 16px;
+  line-height: 125%;
   width: 100%;
   margin-bottom: 21px;
+  padding: 10px 0 10px 0;
+  background-color: $basic-green;
+  font-family: $oswaid-font;
+  color: #ffffff;
+  text-align: center;
+  text-transform: uppercase;
+  @include reset-list;
 }
-
 
 @media (min-width: $tablet-width) {
 .form-request {
@@ -126,18 +47,71 @@
     h1 {
       font-size: 60px;
       line-height: 100%;
-      padding: 40px 0 54px;
+      padding: 27px 0 15px;
+      @include padding-container-form;
     }
 
-    p {
+    .form-request__description {
       font-size: 20px;
       line-height: 150%;
-      margin-bottom: 66px;
-      max-width: 350px;
+      margin-bottom: 67px;
+      @include padding-container-form;
     }
+  }
+
+  /*---  Контейнер и стили для кнопк и *  ---*/
+  .form-request__required-footer {
+    display: flex;
+    align-items: center;
+    gap: 60px;
+    margin-bottom: 60px;
+    @include padding-container-form;
+  }
+
+  .form-request__required-fields {
+    font-family: $lato-font;
+    color: $font-black;
+    font-size: 16px;
+    line-height: 100%;
+  }
+
+  .form-request__button {
+    font-size: 20px;
+    line-height: 130%;
+    width: 284px;
+    margin-bottom: 0;
+    padding: 14px 0 14px 0;
   }
 }
 
 @media (min-width: $desktop-width) {
 
+  .form-request {
+    margin-bottom: 60px;
+
+    h1 {
+      padding: 0;
+      padding-top: 13px;
+      margin-bottom: 55px;
+    }
+
+    .form-request__description {
+      padding: 0;
+    }
+  }
+
+
+  /*---  Контейнер и стили для кнопк и *  ---*/
+  .form-request__required-footer {
+    display: flex;
+    align-items: center;
+    gap: 80px;
+    margin-bottom: 79px;
+    padding: 0;
+  }
+
+  .form-request__button {
+    width: 570px;
+    padding: 14px 0;
+  }
 }
