--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,21 +1,32 @@
 .header {
   color: $font-white;
-  @include container-modile;
   padding-top: 13px;
-  padding-bottom: 8px;
+  padding-bottom: 9px;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: #d9d9d9;
+    bottom: 0;
+  }
 }
 
 @media (min-width: $tablet-width) {
   .header {
-    @include container-tablet;
     padding-top: 25px;
     padding-bottom: 32px;
+
+    &::after {
+      background-color: transparent;
+    }
   }
 }
 
 @media (min-width: $desktop-width) {
   .header {
-    @include container-desktop;
     padding-top: 55px;
     padding-bottom: 55px;
   }
