--- a/source/styles/blocks/owner-info.scss
+++ b/source/styles/blocks/owner-info.scss
@@ -2,21 +2,26 @@
   margin-bottom: 24px;
   position: relative;
 
-  &::before {
+  &::after {
     content: "";
     position: absolute;
     width: 100%;
     height: 2px;
-    top: -45px;
+    top: -70px;
     background-color: $basic-green;
     z-index: -1;
   }
 
   legend {
-    margin-bottom: 35px;
+    margin-bottom: 34px;
     background-color: #ffffff;
+    width: 225px;
     padding: 0 20px;
   }
+}
+
+.owner-info__list {
+  @include reset-list;
 }
 
 .owner-info__item + .owner-info__item {
@@ -36,12 +41,15 @@
 
 .owner-info__item--email {
   position: relative;
+
   &::before {
     content: "";
     display: block;
     position: absolute;
     width: 20px;
     height: 20px;
+    top: 0;
+    left: 0;
     z-index: 2;
     background-color: black;
     mask-image: url("/../images/icons/stack.svg#email-stroke");
@@ -58,6 +66,8 @@
     width: 20px;
     height: 20px;
     z-index: 2;
+    top: 0;
+    left: 0;
     background-color: black;
     mask-image: url("/../images/icons/stack.svg#phone-stroke");
   }
@@ -68,21 +78,30 @@
     margin-bottom: 65px;
     position: relative;
 
-    &::before {
+    &::after {
       content: "";
       position: absolute;
       width: 100%;
       height: 2px;
-      top: -45px;
+      top: -89px;
       background-color: $basic-green;
       z-index: -1;
     }
 
     legend {
       margin-bottom: 76px;
-      background-color: #ffffff;
-      padding: 0 40px;
+      margin-left: 40px;
+      @include padding-container($tablet-width);
+      width: 580px;
     }
+  }
+
+  .owner-info__list {
+    @include padding-container-form;
+  }
+
+  .owner-info__item + .owner-info__item {
+    padding-top: 20px;
   }
 }
 
@@ -104,9 +123,19 @@
     legend {
       margin-bottom: 76px;
       background-color: #ffffff;
-      padding: 0 40px;
-      margin-left: 60px;
+      margin-left: 80px;
     }
+  }
+
+  .owner-info__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 80px;
+    padding: 0;
+  }
+
+  .owner-info__item + .owner-info__item {
+    padding-top: 0;
   }
 }
 
