--- a/source/styles/blocks/pet-info.scss
+++ b/source/styles/blocks/pet-info.scss
@@ -1,5 +1,6 @@
 .pet-info {
   margin-bottom: 50px;
+  @include padding-container(mobile);
 }
 
 .pet-info__item + .pet-info__item {
@@ -17,19 +18,28 @@
   }
 }
 
+@media (min-width: $tablet-width) {
+  .pet-info {
+    margin-bottom: 71px;
+    @include padding-for-two-form;
+  }
+
+  .pet-info__item + .pet-info__item {
+    padding-top: 20px;
+  }
+}
+
+
 
 @media (min-width: $desktop-width) {
   .pet-info {
-    margin-bottom: 72px;
+    margin: 0;
+    width: 570px;
+    padding: 0;
   }
 
   .pet-info__item+.pet-info__item {
     padding-top: 20px;
   }
 }
-/*
-@media (min-width: $tablet-width) {
-  .pet-info {
-    max-width: 570px;
-  }
-}*/
+
