--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,35 +1,48 @@
 .promo {
   display: flex;
   justify-content: center;
-  background-color: rgba(104, 183, 56, 0.85);
-  background-image: url("../../images/index-background-desktop-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  align-items: center;
+  flex-direction: column;
   position: relative;
-  height: 302px;
-  margin-bottom: 198px;
+  margin-bottom: 20px;
 
-  /*---  Зеленый фон  ---*/
+  /*---  Картинка с котом  ---*/
   &::before {
     content: "";
     position: absolute;
-    bottom: 0;
+    background-color: rgba(104, 183, 56, 0.85);
+    background-image: url("../../images/index-background-desktop-mobile@1x.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    background-position: center;
+    height: 302px;
+    margin-bottom: 198px;
+    top: 0;
     left: 0;
     min-width: 100%;
-    min-height: 100%;
+    z-index: -1;
+    background-color: rgba(104, 183, 56, 0.85);
+  }
+
+  /*---  Зеленый фон - перекрывает кота  ---*/
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 302px;
+    z-index: -1;
     background-color: rgba(104, 183, 56, 0.85);
   }
 }
 
 .promo__title {
   padding-top: 27px;
-  position: relative;
-  z-index: 1;
   color: $font-white;
   text-align: center;
   font-weight: 300;
-  @include container-modile;
 
   h1 {
     font-family: $oswaid-font;
@@ -51,7 +64,7 @@
   }
 }
 
-/*---  Картинка с банкой  --*/
+/*---  Картинка с банкой  ---*/
 .promo__image {
   position: absolute;
   top: 167px;
@@ -67,13 +80,17 @@
 @media (min-width: $tablet-width) {
   .promo {
     display: block;
-    background-color: transparent;
-    background-image: none;
     margin-bottom: 535px;
-    @include container-tablet;
 
+    /*---  Картинка с котом  ---*/
     &::before {
       background-color: transparent;
+      background-image: none;
+    }
+    /*---  Зеленый фон - перекрывает кота  ---*/
+    &::after {
+      background-color: transparent;
+      background-image: none;
     }
   }
 
@@ -81,7 +98,6 @@
     color: $font-black;
     padding-left: 90px;
     text-align: left;
-    width: 600px;
 
     h1 {
       font-family: $oswaid-font;
@@ -90,6 +106,7 @@
       font-size: 60px;
       line-height: 100%;
       margin-bottom: 40px;
+      padding-right: 200px;
     }
 
     p {
@@ -102,54 +119,65 @@
       margin-bottom: 50px;
     }
   }
+
   .promo__button {
     display: block;
     text-align: center;
     font-size: 20px;
     line-height: 26px;
-    width: 244px;
     margin-bottom: 20px;
+    width: 244px;
   }
 
   /*---  Картинка с банкой  --*/
   .promo__image {
     position: absolute;
+    z-index: -1;
     top: 228px;
-    right: 29px;
+    right: 150px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .promo {
-    background-image: url("../../images/index-background-desktop-web@1x.webp");
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 720px;
-    height: 694px;
-    z-index: -1;
-    margin-bottom: 218px;
+    margin-bottom: 266px;
 
+    /*---  Картинка с котом  ---*/
     &::before {
       content: "";
       position: absolute;
-      top: 0;
-      right: 0;
-      min-width: 100%;
-      min-height: 100%;
+      background-color: rgba(104, 183, 56, 0.85);
+      background-image: url("../../images/index-background-desktop-web@1x.webp");
+      background-repeat: no-repeat;
+      background-size: cover;
+      object-fit: cover;
+      background-position: center;
+      height: 694px;
+      margin-bottom: 198px;
+      top: -175px;
+      left: 720px;
+      min-width: 50%;
+      z-index: -1;
+      background-color: rgba(104, 183, 56, 0.85);
+    }
+
+    /*---  Зеленый фон - перекрывает кота  ---*/
+    &::after {
+      content: "";
+      position: absolute;
+      top: -175px;
+      left: 720px;
+      min-width: 50%;
+      height: 694px;
+      z-index: -1;
       background-color: rgba(104, 183, 56, 0.85);
     }
   }
 
   .promo__title {
-    position: absolute;
-    top: 197px;
-    left: -40%;
-    transform: translateX(-50%);
     color: $font-black;
     text-align: left;
     width: 700px;
-    @include container-desktop;
 
     h1 {
       font-family: $oswaid-font;
@@ -173,12 +201,14 @@
 
   /*---  Картинка с банкой  --*/
   .promo__image {
-    position: relative;
-    top: 143px;
-    right: 193px;
-    z-index: 5;
+    position: absolute;
+    top: 10px;
+    left: 450px;
+    z-index: 1;
   }
 }
+
+
 
 
 
