--- a/source/styles/blocks/result.scss
+++ b/source/styles/blocks/result.scss
@@ -1,6 +1,6 @@
 .result {
   background-color: #eaeaea;
-  @include container-modile;
+  @include padding-container(mobile);
 }
   h2 {
     font-family: $oswaid-font;
@@ -75,7 +75,7 @@
 @media (min-width: $tablet-width) {
   .result {
     background-color: transparent;
-    @include container-tablet;
+    @include padding-container($tablet-width);
   }
 
   h2 {
@@ -133,6 +133,33 @@
     width: 175px;
     text-align: left;
     margin: 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .result {
+    background-color: transparent;
+    padding: 0;
+
+    h2 {
+      @include padding-container($desktop-width);
+    }
+  }
+
+  .result__content {
+    background-color: #f2f2f2;
+
+    .result__description {
+      @include padding-container($desktop-width);
+    }
+
+    .result__list {
+      @include padding-container($desktop-width);
+    }
+
+    .result__expenses{
+      @include padding-container($desktop-width);
+    }
   }
 }
 
