--- a/source/styles/global/common.scss
+++ b/source/styles/global/common.scss
@@ -1,6 +1,15 @@
-/*$container-modile: padding-container(0, 20px, 0, 20px);
-$container-tablet: padding-container(0, 33.5px, 0, 30px);
-$container-desktop: padding-container(0, 110px, 0, 110px);
+.container {
+  @include padding-container(mobile);
+}
 
-@include padding-container(0, 20px, 0, 20px);
-*/
+@media (min-width: $tablet-width) {
+  .container {
+    @include padding-container($tablet-width);
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .container {
+    @include padding-container($desktop-width);
+  }
+}
