--- a/source/styles/global/mixins.scss
+++ b/source/styles/global/mixins.scss
@@ -7,6 +7,34 @@
     src: $font-src format("woff2");
   }
 }
+
+@mixin padding-container-form {
+  padding-left: 40px;
+  padding-right: 39px;
+}
+
+@mixin padding-for-two-form {
+  padding-left: 70px;
+  padding-right: 70px;
+}
+
+@mixin padding-container($viewport: mobile) {
+  @if $viewport == $desktop-width {
+    padding-right: 110px;
+    padding-left: 110px;
+  }
+  @else if $viewport == $tablet-width {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+  @else {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+
+
+
 /*
 @mixin padding-container($top, $right, $bottom, $left) {
   padding-top: $top;
@@ -14,7 +42,7 @@
   padding-bottom: $bottom;
   padding-left: $left;
 }
-*/
+
 
 @mixin container-modile {
   padding-right: 20px;
@@ -30,7 +58,7 @@
   padding-right: 110px;
   padding-left: 110px;
 }
-
+*/
 @mixin reset-list {
   list-style: none;
   text-decoration: none;
